feat: partial backend integration

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="img">
-    <button class="button-home" [routerLink]="['/admin/home']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
+    <button class="button-home" [routerLink]="['/admin']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
   </div>
   <h1 class="cadastro"> CADASTROS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
