--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -10,7 +10,7 @@
         <div class="icon">
           <i class="fas fa-search fa-lg" style="color: #ffffff;"></i>
         </div>
-        <input type="text" class="input-filter" id="filter">
+        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
       </div>
       <button class="btn-cadastrar" (click)="openDialog()"> CADASTRAR </button>
     </div>
@@ -27,7 +27,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let team of data">
+        <tr *ngFor="let team of data | filter:filterCols:filter">
           <td> {{ team. id }} </td>
           <td> {{ team.name }} </td>
           <td> {{ team.username }} </td>
@@ -47,9 +47,9 @@
     </table>
   </div>
 </div>
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toast">
   <div class="toast-header">
-    <img src="..." class="rounded me-2" alt="...">
+    <img class="rounded me-2" alt="...">
     <strong class="me-auto"> HACK WEEK Serviços </strong>
     <small> {{ elapsedTime }} </small>
     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
