--- a/evaluator/src/app/app.component.html
+++ b/evaluator/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- <app-evaluators></app-evaluators> -->
 <!-- <app-group></app-group> -->
-<app-admin></app-admin>
+<!-- <app-admin></app-admin> -->
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
