--- a/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
@@ -1,14 +1,14 @@
 <div class="dialog-form">
   <h2> Formulário de Avaliador </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
     <div class="input-container">
       <label for="name"> NOME </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="name" placeholder="Ex. João da Silva" formControlName="nome">
+        <input type="text" class="input-form" id="name" placeholder="Ex. João da Silva" formControlName="name">
       </div>
     </div>
     <div class="input-container">
@@ -17,7 +17,7 @@
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-          <input type="text" class="input-form" id="user" placeholder="Ex. joao.silva" formControlName="usuario">
+          <input type="text" class="input-form" id="user" placeholder="Ex. joao.silva" formControlName="username">
 
       </div>
         <div class="form-actions">
