--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -10,7 +10,7 @@
         <div class="icon">
           <i class="fas fa-search fa-lg" style="color: #ffffff;"></i>
         </div>
-        <input type="text" class="input-filter" id="filter">
+        <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
       </div>
       <button class="btn-sortear" (click)="openDialog()"> SORTEAR </button>
     </div>
@@ -28,7 +28,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr *ngFor="let presentation of data | filter:filterCols:filter">
           <td> 1 </td>
           <td> Equipe A </td>
           <td> Stack A </td>
@@ -54,7 +54,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr *ngFor="let presentation of data | filter:filterCols:filter">
           <td> 1 </td>
           <td> Equipe A </td>
           <td> Stack A </td>
@@ -72,9 +72,9 @@
     </table>
   </div>
 </div>
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toast">
   <div class="toast-header">
-    <img src="..." class="rounded me-2" alt="...">
+    <img class="rounded me-2" alt="...">
     <strong class="me-auto"> HACK WEEK Serviços </strong>
     <small> {{ elapsedTime }} </small>
     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
