--- a/evaluator/src/app/components/admin/project/dialog-project/dialog-project.component.html
+++ b/evaluator/src/app/components/admin/project/dialog-project/dialog-project.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-form">
   <h2> Formulário de Projeto </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
     <div class="input-container">
       <label for="title"> NOME </label>
       <div class="input-group">
@@ -11,13 +11,16 @@
         <input type="text" class="input-form" id="title" formControlName="name">
       </div>
     </div>
-    <div class="input-container" *ngFor="let criterion of criteriaList; let i = index">
-      <div class="input-group input-group-checkbox">
-        <div class="checkbox">
-          <input type="checkbox" [formControlName]="'criterion' + i">
-          <label> {{ criterion.toUpperCase() }} </label>
+    <div formArrayName="propositionCriteria">
+      <div class="input-container" *ngFor="let criterion of criteriaList; let i = index" [formGroupName]="i">
+        <div class="input-group input-group-checkbox">
+          <div class="checkbox">
+            <input type="checkbox" formControlName="criterionId">
+            <label> {{ criterion.toUpperCase() }} </label>
+          </div>
+          <input type="hidden" formControlName="propositionId" [value]="form.value.id">
+          <input type="number" class="input-peso" formControlName="weight" placeholder="Peso">
         </div>
-        <input type="number" class="input-peso" [formControlName]="'weight' + i" placeholder="Peso">
       </div>
     </div>
     <div class="form-actions">
