fix: ranking display type

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -2,11 +2,12 @@
   <div class="img">
     <button class="button-home" [routerLink]="['/admin']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
   </div>
-  <h1 class="cadastro"> CADASTROS </h1>
+  <h1 class="cadastro"> USUÁRIOS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
   <button class="button-menu" [routerLink]="['/admin/avaliadores']">Avaliadores</button>
+  <h1 class="cadastro"> CADASTROS </h1>
   <button class="button-menu" [routerLink]="['/admin/criterios']">Critérios</button>
-  <button class="button-menu" [routerLink]="['/admin/projetos']">Projetos</button>
+  <button class="button-menu" [routerLink]="['/admin/projetos']">Desafios</button>
   <h1 class="gerenciamento"> GERENCIAMENTO </h1>
   <button class="button-menu" [routerLink]="['/admin/apresentacoes']">Apresentações</button>
   <button class="btn-exit"> Sair </button>
