--- a/evaluator/src/app/components/admin/project/project.component.html
+++ b/evaluator/src/app/components/admin/project/project.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="header">
-    <h1> PROJETOS </h1>
+    <h1> DESAFIOS </h1>
     <div class="line"></div>
   </div>
   <div class="input-container">
