fix: add button login in header

--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -2,6 +2,7 @@
 
     <div class="header">
         <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
+        <button class="button-login" [routerLink]="['/login']"><i class="fa-solid fa-arrow-right-to-bracket"></i> LOGIN </button>
     </div>
     <!-- <div class="body-loading">
     <h1>Realizando votação</h1>
