--- a/evaluator/src/styles.scss
+++ b/evaluator/src/styles.scss
@@ -7,6 +7,7 @@
     --dark-blue: #1e2447;
     --dark-blue-hover: #1e2447d0;
     --light-blue: #1890ff;
+    --light-blue-hover: #188fffbe;
     --golden: #e2a52c;
     --golden-hover: #e2a52cce;
     --red: #dc143c;
