--- a/evaluator/src/app/components/ranking/ranking.component.scss
+++ b/evaluator/src/app/components/ranking/ranking.component.scss
@@ -19,21 +19,28 @@
   img {
     width: 100%;
     height: auto;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
+    filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
   }
 }
 
-.btn-exit {
+.button-login {
   font-family: var(--font);
   border: none;
-  width: 200px;
+  width: fit-content;
   height: 30px;
+  padding: 0 10px;
   margin-right: 40px;
   color: var(--white);
   text-decoration: none;
   font-size: 1rem;
-  background-color: var(--red);
+  background-color: var(--light-blue);
+  box-shadow: var(--shadow);
+  transition: 0.3s ease;
 }
-
+.button-login:hover{
+  background-color: var(--light-blue-hover);
+}
 // -------- END HEADER
 // ----- CARREGANDO
 .body-loading {
