fix: login button during loading

--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
           </span>
         </div>
       </div>
-      <button type="submit" class="button-login"> ENTRAR </button>
+      <button type="submit" class="button-login" [disabled]="isLoggingIn" [class.button-login-disabled]="isLoggingIn"> ENTRAR </button>
     </form>
   </div>
 </div>
