--- a/evaluator/src/app/components/admin/challenge/challenge.component.html
+++ b/evaluator/src/app/components/admin/challenge/challenge.component.html
@@ -25,16 +25,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let project of data | filter:filterCols:filter">
-          <td> {{ project.id }} </td>
-          <td> {{ project.propositionCriteria.length }} </td>
-          <td> {{ project.name }} </td>
+        <tr *ngFor="let challenge of data | filter: filterCols: filter">
+          <td> {{ challenge.id }} </td>
+          <td> {{ challenge.propositionCriteria.length }} </td>
+          <td> {{ challenge.name }} </td>
           <td class="btn-actions">
             <button>
-              <i class="fa-solid fa-pencil" (click)="edit(project);"></i>
+              <i class="fa-solid fa-pencil" (click)="edit(challenge);"></i>
             </button>
             <button>
-              <i class="fa-regular fa-trash-can" (click)="remove(project)"></i>
+              <i class="fa-regular fa-trash-can" (click)="remove(challenge);"></i>
             </button>
           </td>
         </tr>
@@ -42,14 +42,4 @@
     </table>
   </div>
 </div>
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toast">
-  <div class="toast-header">
-    <img class="rounded me-2" alt="...">
-    <strong class="me-auto"> HACK WEEK Serviços </strong>
-    <small> {{ elapsedTime }} </small>
-    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-  </div>
-  <div class="toast-body">
-    {{ notification }}
-  </div>
-</div>
+<app-toast></app-toast>
