--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -43,14 +43,4 @@
     </table>
   </div>
 </div>
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="toast">
-  <div class="toast-header">
-    <img class="rounded me-2" alt="...">
-    <strong class="me-auto"> HACK WEEK Serviços </strong>
-    <small> {{ elapsedTime }} </small>
-    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-  </div>
-  <div class="toast-body">
-    {{ notification }}
-  </div>
-</div>
+<app-toast></app-toast>
