fix: new password button

--- a/evaluator/src/app/components/admin/challenge/challenge.component.scss
+++ b/evaluator/src/app/components/admin/challenge/challenge.component.scss
@@ -119,9 +119,10 @@ tbody tr:last-child td {
 }
 
 .btn-actions{
-  display: flex;
   justify-content: center;
-  gap: 15px;
+  button {
+    margin: 0 8px;
+  }
 }
 
 
