--- a/evaluator/src/app/components/admin/presentation/presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.scss
@@ -123,9 +123,10 @@ button {
 }
 
 .btn-actions {
-  display: flex;
   justify-content: center;
-  gap: 15px;
+  button {
+    margin: 0 8px;
+  }
 }
 .fa-lg{
   color: var(--white);
