--- a/evaluator/src/app/components/admin/team/team.component.scss
+++ b/evaluator/src/app/components/admin/team/team.component.scss
@@ -131,9 +131,10 @@ tbody tr:last-child td {
 }
 
 .btn-actions {
-  display: flex;
   justify-content: center;
-  gap: 15px;
+  button {
+    margin: 0 8px;
+  }
 }
 .bold{
   font-weight: 700;
