--- a/evaluator/src/app/components/evaluators/evaluators.component.scss
+++ b/evaluator/src/app/components/evaluators/evaluators.component.scss
@@ -97,9 +97,10 @@ button {
 }
 
 .btn-actions {
-  display: flex;
   justify-content: center;
-  gap: 15px;
+  button {
+    margin: 0 8px;
+  }
 }
 
 h2 {
