--- a/evaluator/src/app/components/admin/presentation/dialog-presentation/dialog-presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/dialog-presentation/dialog-presentation.component.html
@@ -1,3 +1,7 @@
 <div class="content">
-    <h1> GRUPO1_C# </h1>
+    <h1> Deseja realmente encerrar as apresentações? </h1>
+    <div class="btn-actions">
+        <button mat-dialog-close class="btn-cancel">CANCELAR</button>
+        <button>ENCERRAR</button>
+    </div>
 </div>
