--- a/evaluator/src/app/components/admin/presentation/dialog-presentation/dialog-presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/dialog-presentation/dialog-presentation.component.scss
@@ -1,27 +1,62 @@
+@import url(src/styles.scss);
+
 .content {
-    width: 40rem;
-    height: 10rem;
-    background-color: var(--dark-blue);
+  width: 40rem;
+  height: 10rem;
+  background-color: var(--dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+h1 {
+  color: var(--white);
+  margin: 0;
+  font-size: 1.7rem;
+  line-height: 1.3;
+}
+
+.btn-actions {
+  padding-top: 15px;
+  display: flex;
+  gap: 10px;
+}
+
+button {
+  border: none;
+  text-decoration: none;
+  width: 250px;
+  height: 50px;
+  background-color: var(--red);
+  color: var(--white);
+  transition: 0.3s ease;
+}
+
+.btn-cancel {
+  background-color: var(--grey);
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
   }
-  
+
   h1 {
-    color: var(--white);
-    margin: 0;
-    font-size: 3rem;
+    font-size: 2rem;
+    text-align: center;
   }
-  
-  @media (max-width: 768px) {
-    .content {
-      width: 80vw;
-      height: 30vh;
-    }
-  
-    h1 {
-      font-size: 2rem;
-    }
+
+  .btn-actions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-  
+}
