--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -12,7 +12,7 @@
         </div>
         <input type="text" class="input-filter" id="filter" [(ngModel)]="filter">
       </div>
-      <button class="btn-sortear" (click)="openDialog()"> SORTEAR </button>
+      <button class="btn-finish" (click)="openDialog()"> ENCERRAR APRESENTAÇÕES </button>
     </div>
   </div>
   <h2 class="title-table"> EM ESPERA </h2>
@@ -20,11 +20,10 @@
     <table>
       <thead>
         <tr>
-          <th class="bold"> ID </th>
-          <th> EQUIPE </th>
+          <th class="bold"> ORDEM </th>
+          <th> NOME DA EQUIPE </th>
           <th> STACK </th>
-          <th> CRITÉRIOS </th>
-          <th> AÇÕES </th>
+          <th> NOME DO PROJETO </th>
         </tr>
       </thead>
       <tbody>
@@ -32,11 +31,7 @@
           <td> 1 </td>
           <td> Equipe A </td>
           <td> Stack A </td>
-          <td> Critérios A </td>
-          <td class="btn-actions">
-            <button><i class="fa-solid fa-play fa-xl"></i></button>
-            <button><i class="fa-solid fa-stop fa-xl"></i></button>
-          </td>
+          <td> Evaluators HackWeek </td>
         </tr>
       </tbody>
     </table>
@@ -61,7 +56,7 @@
             <td class="td-accordion">
               <cdk-accordion class="example-accordion">
                 <cdk-accordion-item #accordionItem="cdkAccordionItem" class="example-accordion-item" role="button"
-                  tabindex="0" [attr.id]="'accordion-header-' + i" [attr.aria-controls]="'accordion-body-' + i">
+                  tabindex="0" [attr.id]="'accordion-header-' + '{{item.id}}'" [attr.aria-controls]="'accordion-body-' + '{{item.id}}'">
                   <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
                     Avaliações por avaliador
                     <span>
@@ -71,11 +66,11 @@
                   </div>
                   <div class="example-accordion-item-body" role="region"
                     [style.display]="accordionItem.expanded ? '' : 'none'"
-                    [attr.id]="'accordion-body-' + 'AQUI-VAI-O-ID1'"
-                    [attr.aria-labelledby]="'accordion-header-' + 'AQUI-VAI-O-ID1'">
+                    [attr.id]="'accordion-body-' + '{{item.id}}'"
+                    [attr.aria-labelledby]="'accordion-header-' + '{{item.id}}'">
                     <ul>
                       <li class="li-evaluators" *ngFor="let item of avaliadores">
-                        <div class="name-evaluator">{{ item.name }}</div>
+                        <div class="name-evaluator">{{ item.name }} | <span class="color-score">Nota Final: 8.7 </span></div>
                         <div class="button-delete">
                           <button *ngIf="item.isIconVisible" class="delete-evaluator" (click)="item.isIconVisible = false">
                             <i class="fa-regular fa-trash-can"></i>
