--- a/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
+++ b/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
@@ -3,13 +3,22 @@
   <div class="line"></div>
   <form [formGroup]="form" (ngSubmit)="onSubmit(form.value);">
     <div class="input-container">
-      <label for="representative"> REPRESENTANTE </label>
+      <label for="representative"> NOME DA EQUIPE </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="representative" placeholder="Ex. Nome Sobrenome"
+        <input type="text" class="input-form" id="representative" placeholder="Ex.: Grupo1_C#"
           formControlName="name">
+      </div>
+    </div>
+    <div class="input-container">
+      <label for="position"> POSIÇÃO NA ORDEM DE APRESENTAÇÃO </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fas fa-arrow-down-short-wide fa-lg"></i>
+        </div>
+        <input type="number" class="input-form" id="position" placeholder="Ex.: 1" formControlName="position">
       </div>
     </div>
     <div class="input-container">
