fix: drag and drop table presentation

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -2,7 +2,7 @@
   <div class="img">
     <button class="button-home" [routerLink]="['/admin']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
   </div>
-  <h1 class="cadastro"> USUÁRIOS </h1>
+  <h1 class="cadastro"> ACESSOS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
   <button class="button-menu" [routerLink]="['/admin/avaliadores']">Avaliadores</button>
   <h1 class="cadastro"> CADASTROS </h1>
