feat: events in menu admin

--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -2,6 +2,15 @@
   <div class="img">
     <button class="button-home" [routerLink]="['/admin']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
   </div>
+    <div class="select-add">
+      <select name="events" id="events">
+        <option value="" disabled selected hidden>Selecione um evento</option>
+        <option value="">2022.2</option>
+        <option value="">2023.1</option>
+        <option value="">2023.2</option>
+      </select>
+      <button class="btn-add-event" title="Adicionar evento"><i class="fa-solid fa-plus"></i></button>  
+    </div>
   <h1 class="cadastro"> ACESSOS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
   <button class="button-menu" [routerLink]="['/admin/avaliadores']">Avaliadores</button>
