--- a/evaluator/src/app/components/admin/admin.component.scss
+++ b/evaluator/src/app/components/admin/admin.component.scss
@@ -12,7 +12,33 @@
     height: auto;
   }
 }
-
+.select-add{
+  width: 200px;
+  font-family: var(--font);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .btn-add-event{
+    border: none;
+    background: none;
+    text-decoration: none;
+    color: var(--golden);
+  }
+  select{
+    width: 170px;
+    border: none;
+    background-color: var(--golden);
+    color: var(--white);
+  }
+  #events option{
+    border: none;
+    background-color: var(--golden-hover);
+  }
+}
+.fa-plus:hover {
+	-webkit-animation: rotate-center 0.6s ease-in-out both;
+	        animation: rotate-center 0.6s ease-in-out both;
+}
 .cadastro,
 .gerenciamento {
   text-align: center;
@@ -111,5 +137,25 @@ div.content {
   .sidebar button {
     text-align: center;
     float: none;
+  }
+}
+ @-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
