--- a/evaluator/src/app/components/admin/admin.component.scss
+++ b/evaluator/src/app/components/admin/admin.component.scss
@@ -10,6 +10,9 @@
   img {
     width: 230px;
     height: auto;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
+    filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
+
   }
 }
 .select-add{
