--- a/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
+++ b/evaluator/src/app/components/evaluators/dialog-assessment/dialog-assessment.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-form">
-    <h2> NOME DA EQUIPE </h2>
+    <h2> NOME DO PROJETO DA EQUIPE </h2>
     <h3><span class="bold">Stack: </span>C#</h3>
     <div class="line"></div>
     <form class="formGroup">
@@ -8,7 +8,7 @@
               <tr>
                 <th class="bold criterion"> CRITÉRIOS </th>
                 <th class="bold weight"> PESO </th>
-                <th class="bold note"> NOTA </th>
+                <th class="bold note"> NOTA <span class="max-score">máx.: 5</span></th>
               </tr>
             </thead>
             <tbody>
@@ -16,7 +16,10 @@
                 <td> {{criterion.nome}} </td>
                 <td class="td-weight"> {{criterion.peso}} </td>
                 <td>
-                    <input type="number" class="input-form" placeholder="Ex.: 7,5">
+                    <input type="number" class="input-form" placeholder="Ex.: 0 - 5" min="0" max="5" 
+                    [(ngModel)]="criterion.nota"
+                    name="nota"
+                    [ngClass]="{'invalid-note': checkInvalidNote(criterion)}">
                 </td>
               </tr>
             </tbody>
