--- a/evaluator/src/app/components/evaluators/evaluators.component.scss
+++ b/evaluator/src/app/components/evaluators/evaluators.component.scss
@@ -20,6 +20,9 @@
   img {
     width: 100%;
     height: auto;
+    -webkit-filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
+    filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 90%));
+
   }
 }
 
