--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -100,6 +100,7 @@
             </tr>
           </tbody>
         </table>
+        <h1 class="final-score">NOTA FINAL: <span class="bold">17,50</span></h1>
       </div>
     </div>
   </div>
