--- a/evaluator/src/app/components/admin/challenge/challenge.component.html
+++ b/evaluator/src/app/components/admin/challenge/challenge.component.html
@@ -20,7 +20,7 @@
       <thead>
         <tr>
           <th class="bold"> ID </th>
-          <th> CRITÉRIOS </th>
+          <th> NOME DO DESAFIO </th>
           <th> AÇÕES </th>
         </tr>
       </thead>
