--- a/evaluator/src/app/components/group/group.component.scss
+++ b/evaluator/src/app/components/group/group.component.scss
@@ -250,8 +250,10 @@ th {
     width: 50%;
 }
 .final-score{
+    text-align: right;
     padding-top: 20px;
     font-family: var(--font);
+    color: var(--dark-blue);
 }
 //FIM DA TABELA 
 .bold {
