--- a/evaluator/src/app/components/admin/presentation/presentation.component.html
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.html
@@ -15,6 +15,7 @@
       <button class="btn-finish" (click)="openDialog()"> ENCERRAR APRESENTAÇÕES </button>
     </div>
   </div>
+  <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
   <h2 class="title-table"> EM ESPERA </h2>
   <div cdkDropList (cdkDropListDropped)="drop($event)">
     <div class="table await">
