--- a/evaluator/src/app/components/evaluators/evaluators.component.html
+++ b/evaluator/src/app/components/evaluators/evaluators.component.html
@@ -9,6 +9,7 @@
   <div class="line"></div>
   <p class="intro"> Está é a sua página de avaliador<span style="font-weight: 500;"> +DEVS2BLU HACK WEEK </span> </p>
   <p> Aqui você acompanha o estado atual das suas avaliações </p>
+  <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
   <div class="table">
     <h2> ABERTAS </h2>
     <table>
