--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -15,6 +15,7 @@
       <button class="btn-cadastrar" (click)="openDialog();"> CADASTRAR </button>
     </div>
   </div>
+  <div *ngIf="data.length == 0"><app-no-registry></app-no-registry></div>
   <div class="table">
     <table>
       <thead>
