--- a/evaluator/src/app/shared/components/toast/toast.component.html
+++ b/evaluator/src/app/shared/components/toast/toast.component.html
@@ -3,7 +3,7 @@
     <div class="toast-header">
       <img class="rounded me-2" src="assets/img/logo-devs2blu-min.png">
       <strong class="me-auto"> Service </strong>
-      <small *ngIf="elapsedTime > 0"> em {{ elapsedTime }}ms </small>
+      <small *ngIf="elapsedTime"> em {{ elapsedTime }}ms </small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
