--- a/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
+++ b/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
@@ -8,8 +8,7 @@
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="representative" placeholder="Ex.: Grupo1_C#"
-          formControlName="name">
+        <input type="text" class="input-form" id="representative" placeholder="Ex. Grupo1_C#" formControlName="name">
       </div>
     </div>
     <div class="input-container">
@@ -18,7 +17,7 @@
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="user" placeholder="Ex.: nome.sobrenome" formControlName="username">
+        <input type="text" class="input-form" id="user" placeholder="Ex. nome.sobrenome" formControlName="username">
       </div>
       <div class="form-actions">
         <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
