--- a/evaluator/src/app/components/admin/criterion/criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/criterion.component.html
@@ -35,7 +35,7 @@
               <i class="fa-solid fa-pencil" (click)="edit(item);"></i>
             </button>
             <button>
-              <i class="fa-regular fa-trash-can" (click)="remove(item.id);"></i>
+              <i class="fa-regular fa-trash-can" (click)="remove(item);"></i>
             </button>
           </td>
         </tr>
