--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -5,7 +5,7 @@
 <div class="body">
   <h1> EQUIPE </h1>
   <div class="line"></div>
-  <p class="intro"> Está é a sua página de equipe<span style="font-weight: 500;"> +DEVS HACK WEEK </span> </p>
+  <p class="intro"> Está é a sua página de equipe<span style="font-weight: 500;"> +DEVS HACK WEEK </span></p>
   <p> Aqui você cadastra e acompanha o estado atual do seu projeto </p>
 </div>
 <div class="main">
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-people-group fa-lg"></i>
               </div>
               <input type="text" class="input-form" id="members"
-                placeholder="Ex.: Pedro Santana, Maria Ferreira, Guilherme Silva, ..." formControlName="name">
+                placeholder="Ex. Pedro Santana, Maria Ferreira, Guilherme Silva, ..." formControlName="name">
             </div>
           </div>
           <div class="input-container">
@@ -37,7 +37,7 @@
               </select>
             </div>
           </div>
-          
+
           <div class="input-container">
             <label for="challenge"> STACK </label>
             <div class="input-group">
@@ -65,7 +65,7 @@
               <div class="icon icon-textarea">
                 <i class="fa-regular fa-pen-to-square fa-lg"></i>
               </div>
-              <textarea class="input-form" placeholder="Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quas explicabo corporis soluta harum dolor minima beatae unde accusantium natus!&#10;&#10;Repositório: https://github.com/" name="description" id="description" cols="30" rows="5"
+              <textarea class="input-form" placeholder="Ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quas explicabo corporis soluta harum dolor minima beatae unde accusantium natus!&#10;&#10;Repositório: https://github.com/" name="description" id="description" cols="30" rows="5"
                 formControlName="description"></textarea>
             </div>
           </div>
@@ -96,11 +96,11 @@
                   <div class="ball" [style.left.%]="(criterion.grade / 10) * 100"></div>
                 </div>
               </td>
-              <td>{{ criterion.grade.toLocaleString('pt-BR', { minimumFractionDigits: 1 })}}</td>
+              <td> {{ criterion.grade.toLocaleString('pt-BR', { minimumFractionDigits: 1 }) }} </td>
             </tr>
           </tbody>
         </table>
-        <h1 class="final-score">NOTA FINAL: <span class="bold">17,50</span></h1>
+        <h1 class="final-score"> NOTA FINAL: <span class="bold"> 17,50 </span></h1>
       </div>
     </div>
   </div>
